--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Git Demo</a>
+          <a class="navbar-brand" href="#">Git Demo2</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
@@ -56,7 +56,7 @@
     <div class="jumbotron">
       <div class="container">
         <h1>Hello, Git user!</h1>
-        <p>This is our Git demo site to show off all that Git can do.</p>
+        <p>This is our second Git demo site to show off all that Git can do.</p>
         <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more &raquo;</a></p>
       </div>
     </div>
